24) kernel: ralink_spi: add N25Q256A and MT25QL512AB support.<br>
25) kernel: ralink spi: fix write after unprotect bits clear, fix Winbond quad mode.<br>
26) kernel: ralink_gpio: switch to schedule_work.<br>
27) kernel: ralink_gpio: fix 9532 mode support.<br>
28) kernel: ralink_gpio: disable unused interfaces for use more gpio pins.<br>
29) kernel: ralink_wifi: add drivers for 7610/76x2 pci-e chips.<br>
30) kernel: ralink_wifi: fix support 7650 chips.<br>
31) kernel: raeth: add 802.3az EEE control for MT7620 ESW, disable EEE by default for all PHY.<br>
32) kernel: ralink ehci: add workaround for embedded synopsys host controller.<br>
33) kernel: ralink arch: add MT7621 xHCI platform device, add MT7621/MT7628 UPHY calibration.<br>
34) kernel: ralink arch: usb: xhci: add support MT7621 xHCI HC.<br>
35) kernel: netfilter: nf_conntrack: allow server to become a client in TW handling.<br>
36) kernel: netfilter: conntrack: avoid zeroing timer.<br>
37) kernel: net: rearrange loop in net_rx_action.<br>
38) kernel: net: gro: GRO_MERGED_FREE consumes packets.<br>
39) kernel: net: gro: fix a potential crash in skb_gro_reset_offset.<br>
40) kernel: net: gro: dev_gro_receive() cleanup.<br>
41) kernel: net: gro: avoid double copy in skb_gro_receive().<br>
42) kernel: net: skbuff: don't zero tc members when freeing skb.<br>
43) kernel: net_dma: simple removal (broken and not used).<br>
44) kernel: net_dma: revert copied_early.<br>
45) kernel: ipv4: dst_entry leak in ip_send_unicast_reply().<br>
46) kernel: mm: fix swapoff hang after page migration and fork.<br>
47) kernel: tun: fixed unsigned/signed comparison.<br>
48) kernel: ipv6: stop sending PTB packets for MTU < 1280.<br>
<br>
<br>
<b>2.2.x</b><br>
1) build_system: add some variants for 7620 based dual band.<br>
<br>
<br>
<b>TODO:</b><br>
1) port support l2tp/pptp hardware NAT offload (really needed??? in sdk very ugly code).<br>
2) full russian ui (need help community or employ the web developer).<br>
<br>
<br>
<br>