@@ -555,7 +555,8 @@ void formIptAccounting(webs_t wp, char_t *path, char_t *query)
 	}
 
 	doSystem("modprobe -q ipt_account");
-	doSystem("service iptables restart");
+
+	firewall_rebuild();
 
 	char_t *submitUrl = websGetVar(wp, T("submit-url"), T(""));   // hidden page
 	if (submitUrl != NULL)
@@ -773,8 +774,9 @@ static void l2tpConfig(webs_t wp, char_t *path, char_t *query)
 	nvram_commit(RT2860_NVRAM);
 	nvram_close(RT2860_NVRAM);
 
+	firewall_rebuild();
+
 	doSystem("service vpnserver restart");
-	doSystem("service iptables restart");
 
 	// Redirect if possible
 	char_t *submitUrl = websGetVar(wp, T("submit-url"), T(""));   // hidden page
